--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "codes-and-wires",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://aritrachatterjee.github.io/codes-and-wires",
+    "homepage": "https://aritrachatterjee.github.io/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
