--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build",
+        "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
+        "format-check": "prettier --check src/**/*.{js,jsx,ts,tsx}"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -47,5 +49,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "prettier": "2.0.5"
     }
 }
